Changes for 1.5
* Players who have both no movable attacking land units units, and either no factories or no land, will no longer be able to do any political actions, and any political actions affecting only them can not be done. They will now auto-accept any action from another player in addition. (veqryn) 

* Allowed alliances to stop having war with each other. (veqryn)

* Allowed players to leave an alliance completely, with all members. (veqryn)

* Forced all alliance players to go out of war if one of them goes out of war, with a player. (veqryn)

* Forced players to have their ally's agreement when going into or out of war, and letting new people into the alliance. (veqryn)

* Created new relationshipTypeAttachment, isDefaultWarPosition and alliancesCanChainTogether, which handle if and when relationships will chain. (veqryn)

* Created new game option, "Alliances Can Chain Together", which causes anyone who is allied with your ally, to become your ally, and any of your ally's enemies to become your enemy. (veqryn)

* Created new game option, "Relationships Last Extra Rounds", which lets a player have relationships last additional or fewer rounds than default. (veqryn)

* Added ability for TripleA to remember which type of player you selected when you reload the game. And fixed bug where hosted online games did not remember your selection. (veqryn)

* Added methods for AI to cheat in all games, using new properties: "AI Bonus Income Percentage", "AI Bonus Attack", "AI Bonus Defense". (veqryn)

* Fixed "not all units can blitz" bug. (veqryn)

* Made the engine write who (ai/human/client) is playing each player, each time game is loaded, to the history panel. (veqryn)

* Adding political map skin, and reconstructed basetiles, for Napoleonic Empires. (veqryn)

* Stopped blitzing out of a combat into further combat, if you began in same territory. (veqryn)

* Allowed less strict Edit Mode options. (veqryn)
